Updated Pages/ Added Dynamic Routing

--- a/single-portfolio.html
+++ b/single-portfolio.html
@@ -14,6 +14,9 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Arimo:wght@600;700&family=Familjen+Grotesk:wght@600;700&family=Inter:wght@400;600&family=Libre+Baskerville:wght@700&family=Syne:wght@600;700&display=swap"
     rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v6.0.0-beta3/css/all.css">
+  <link rel="stylesheet" href="https://unpkg.com/kursor/dist/kursor.css">
   <!-- End google font  -->
 
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -121,20 +124,8 @@
       </div>
       <div class="aximo-project-info-wrap">
         <div class="aximo-project-info">
-          <h3>Client:</h3>
-          <p>Alfado Company,UK</p>
-        </div>
-        <div class="aximo-project-info">
-          <h3>Date:</h3>
-          <p>June</p>
-        </div>
-        <div class="aximo-project-info">
-          <h3>Duration:</h3>
-          <p>Two Months</p>
-        </div>
-        <div class="aximo-project-info">
-          <h3>Cost:</h3>
-          <p>50k USD</p>
+          <h3>Live Url:</h3>
+          <a style='all:unset; cursor: pointer; font-weight: 500;' href="www.youtube.com">https://www.demo.com</a>
         </div>
       </div>
       <div class="aximo-project-single-wrap">
@@ -459,8 +450,17 @@
   <!-- <script src="assets/js/scrollsmooth.js"></script> -->
   <script src="assets/js/faq.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyArZVfNvjnLNwJZlLJKuOiWHZ6vtQzzb1Y"></script>
+  <script src="https://cdn.jsdelivr.net/npm/kursor@0.0.14/dist/kursor.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.7/axios.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 
   <script src="assets/js/app.js"></script>
+  <script src="assets/js/contact.js"></script>
+  <script>
+    new kursor({
+      type: 4
+    })
+  </script>
 
 
 </body>
