--- a/single-service.html
+++ b/single-service.html
@@ -498,6 +498,11 @@
   <script src="https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyArZVfNvjnLNwJZlLJKuOiWHZ6vtQzzb1Y"></script>
 
   <script src="assets/js/app.js"></script>
+  <script>
+    new kursor({
+      type: 4
+    })
+  </script>
 
 
 </body>
