--- a/index.html
+++ b/index.html
@@ -108,8 +108,6 @@
   </header>
   <!--End landex-header-section -->
 
-
-
   <div class="aximo-hero-section dark-bg">
     <div class="container position-relative">
       <div class="row">
@@ -645,6 +643,92 @@
       </div>
     </div>
   </div>
+
+
+  <!-- News Section Starts -->
+  <div class="section aximo-section-padding3">
+    <div class="container">
+      <div class="aximo-section-title center">
+        <h2>
+          Announcements
+          <span class="aximo-title-animation">
+            just for you
+            <span class="aximo-title-icon">
+              <img src="assets/images/v1/star2.png" alt="">
+            </span>
+          </span>
+        </h2>
+      </div>
+      <div class="row">
+        <div class="col-lg-4">
+          <div class="aximo-testimonial-wrap wow fadeInUpX" data-wow-delay="0.1s">
+            <div class="aximo-testimonial-rating">
+              <div
+                style="background-color: #ff6969; width: fit-content; color: white; border-radius: 2rem; padding: .25rem 1rem; font-size: .85rem; margin-bottom: 1rem;">
+                HOT</div>
+              <h4>Todays Deal
+              </h4>
+            </div>
+            <div class="aximo-testimonial-data">
+              <p>TechBucket Is Hiring, Mail us your resume & get started!</p>
+            </div>
+            <div class="aximo-testimonial-author">
+              <div class="aximo-testimonial-author-data">
+                <a style='all:unset;' href="/index.html"
+                  class="d-flex align-items-center justify-content-center rounded-3">
+                  <i class="fa-regular fa-link"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="aximo-testimonial-wrap wow fadeInUpX" data-wow-delay="0.1s">
+            <div class="aximo-testimonial-rating">
+              <div
+                style="background-color: #ff6969; width: fit-content; color: white; border-radius: 2rem; padding: .25rem 1rem; font-size: .85rem; margin-bottom: 1rem;">
+                HOT</div>
+              <h4>Todays Deal
+              </h4>
+            </div>
+            <div class="aximo-testimonial-data">
+              <p>TechBucket Is Hiring, Mail us your resume & get started!</p>
+            </div>
+            <div class="aximo-testimonial-author">
+              <div class="aximo-testimonial-author-data">
+                <a style='all:unset;' href="/index.html"
+                  class="d-flex align-items-center justify-content-center rounded-3">
+                  <i class="fa-regular fa-link"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="aximo-testimonial-wrap wow fadeInUpX" data-wow-delay="0.1s">
+            <div class="aximo-testimonial-rating">
+              <div
+                style="background-color: #ff6969; width: fit-content; color: white; border-radius: 2rem; padding: .25rem 1rem; font-size: .85rem; margin-bottom: 1rem;">
+                HOT</div>
+              <h4>Todays Deal
+              </h4>
+            </div>
+            <div class="aximo-testimonial-data">
+              <p>TechBucket Is Hiring, Mail us your resume & get started!</p>
+            </div>
+            <div class="aximo-testimonial-author">
+              <div class="aximo-testimonial-author-data">
+                <a style='all:unset;' href="/index.html"
+                  class="d-flex align-items-center justify-content-center rounded-3">
+                  <i class="fa-regular fa-link"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   <!-- End section -->
 
   <div class="aximo-auto-slider-section">
@@ -717,11 +801,11 @@
         </h2>
       </div>
       <div class="row justify-content-center">
-        <div class="col-xl-3 col-md-6" onClick="ShowMsg()">
+        <div class="col-xl-3 col-md-6">
           <div class="aximo-team-wrap wow fadeInUpX" data-wow-delay="0.1s">
             <div class="aximo-team-thumb">
               <img src="assets/images/team/team1.png" alt="">
-              <div class="aximo-social-icon team-social">
+              <!-- <div class="aximo-social-icon team-social">
                 <ul>
                   <li>
                     <a href="https://twitter.com/" target="_blank">
@@ -744,10 +828,10 @@
                     </a>
                   </li>
                 </ul>
-              </div>
+              </div> -->
             </div>
             <div class="aximo-team-data">
-              <a href="single-team.html">
+              <a href="single-team.html#shahbaz">
                 <h3>Shahbaz Singh</h3>
               </a>
               <p>Founder / Operations Manager</p>
@@ -758,7 +842,7 @@
           <div class="aximo-team-wrap wow fadeInUpX" data-wow-delay="0.2s">
             <div class="aximo-team-thumb">
               <img src="assets/images/team/team2.png" alt="">
-              <div class="aximo-social-icon team-social">
+              <!-- <div class="aximo-social-icon team-social">
                 <ul>
                   <li>
                     <a href="">
@@ -781,10 +865,10 @@
                     </a>
                   </li>
                 </ul>
-              </div>
+              </div> -->
             </div>
             <div class="aximo-team-data">
-              <a href="single-team.html">
+              <a href="single-team.html#gurnoor">
                 <h3>Gurnoor Sapra</h3>
               </a>
               <p>Founder / Business Strategist</p>
@@ -795,7 +879,7 @@
           <div class="aximo-team-wrap wow fadeInUpX" data-wow-delay="0.3s">
             <div class="aximo-team-thumb">
               <img src="assets/images/team/team3.png" alt="">
-              <div class="aximo-social-icon team-social">
+              <!-- <div class="aximo-social-icon team-social">
                 <ul>
                   <li>
                     <a href="">
@@ -818,10 +902,10 @@
                     </a>
                   </li>
                 </ul>
-              </div>
+              </div> -->
             </div>
             <div class="aximo-team-data">
-              <a href="single-team.html">
+              <a href="single-team.html#rajvir">
                 <h3>Rajvir Bheniwal</h3>
               </a>
               <p>Task Manager</p>
